@@ -123,6 +123,9 @@ Extensions
 Library
 -------
 
+- Issue #9129: smtpd.py is vulnerable to DoS attacks deriving from missing 
+  error handling when accepting a new connection.
+
 - Issue #9601: ftplib now provides a workaround for non-compliant 
   implementations such as IIS shipped with Windows server 2003 returning invalid 
   response codes for MKD and PWD commands.
